--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -51,11 +52,56 @@
 
     <ul id="gallery"></ul>
 
+    Задание 4
+
+    <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
+
+    задание 5
+
+
+    <br>
+    <br>
+    <br>
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    Задание 6
+    <br>
+    <br>
+    <br>
+
+    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+
+    <br>
+    <br>
+
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
+    <br>
+    <br>
+    <div id="controls">
+        <input type="number" min="0" max="100" step="1" />
+        <button type="button" data-action="render">Создать</button>
+        <button type="button" data-action="destroy">Очистить</button>
+    </div>
+
+    <div id="boxes"></div>
 
 
     <script type="module" src="./js/task-1.js"> </script>
     <script type="module" src="./js/task-2.js"> </script>
     <script type="module" src="./js/task-3.js"> </script>
+    <script type="module" src="./js/task-4.js"> </script>
+    <script type="module" src="./js/task-5.js"> </script>
+    <script type="module" src="./js/task-6.js"> </script>
+    <script type="module" src="./js/task-7.js"> </script>
+    <script type="module" src="./js/task-8.js"> </script>
 </body>
 
 </html>
