--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
     <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
 
     <br>
+    <br> Задание 7
+    <br>
     <br>
 
-    <input id="font-size-control" type="range" />
+    <input id="font-size-control" type="range" value="16" />
     <br />
     <span id="text">Абракадабра!</span>
 
