--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <br>
     <br>
 
-    <input id="font-size-control" type="range" value="16" />
+    <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
 
