Revert "фиксит ползунок"
This reverts commit 5749a9dcdf7868c683f0c490094c6fe794166c52.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <br>
     <br>
 
-    <input id="font-size-control" type="range" />
+    <input id="font-size-control" type="range" value="16" />
     <br />
     <span id="text">Абракадабра!</span>
 
